initail amsler test

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -16,3 +16,11 @@
       ' Tarcze Ishihary
       i.icon-arrow-right
 
+  .span4
+    h3 Test Amslera
+    p Test widzenia w obrębie dołka środkowego siatkówki
+    p Test pomaga w wykruciu zwyrodnienia śatkówki lub problemów z nerwem wzrokowym.
+    a.btn href='test_amslera.html'
+      ' Test Amslera
+      i.icon-arrow-right
+
