--- a/source/layout.slim
+++ b/source/layout.slim
@@ -28,7 +28,7 @@ html lang="pl"
             span.icon-bar
           == link_to 'EyeSight', 'index.html', class: 'brand'
           .nav-collapse
-            - {'Testy wzroku' => 'index.html', 'Tarcze Ishihary' => 'tarcze_ishinary.html'}.each do |name, file|
+            - {'Testy wzroku' => 'index.html', 'Tarcze Ishihary' => 'tarcze_ishinary.html', 'Test Amslera' => 'test_amslera.html'}.each do |name, file|
               ul.nav
                 - if request.path_info == file
                   li.active
