--- a/source/test_amslera.html.slim
+++ b/source/test_amslera.html.slim
@@ -12,7 +12,7 @@
             li#tab-grid
               a data-toggle='tab' href='#pane-grid' style='outline: 0' Siatka Amslera
             li#tab-results
-              a data-toggle='tab' href='#pane-results' style='outline: 0' Wyniki
+              a data-toggle='tab' href='#pane-results' style='outline: 0' Wynik
       .row.tab-content
         .tab-pane.active id="pane-instruction"
           .span12
@@ -102,7 +102,7 @@
           .span12
             .row
               .span8
-                h3 Wyniki badania
+                h3 Wynik badania
                 p Zniekształcona siatka przedstawiona po prawej ukazuje przykładowy obraz jaki może widzieć osoba z zwyrodnieniem śatkówki lub problemem z nerwem wzrokowym.
                 ul.unstyled
                   li
