nicer index page with icons

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,14 +1,16 @@
 - content_for :title do
-  h1 Przetestuj swój wzrok
+  h1 Testy wzroku
 
 .row
   .span12
-    p Na tej stronie możesz wykonać kilka prostych badań wzroku.
-    p Wybierz grupę testów by rozpocząć badanie.
-    p Po zakończeniu badania otrzymasz wyniki.
-    p Pamiętaj że te testy nie zastąpią profesjonalnych badań wykonanych przez okulistę.
+    .hero-unit
+      h1 Przetestuj swój wzrok
+      p Na tej stronie możesz wykonać kilka prostych badań wzroku.
 
 .row
+  .span2
+    .thumbnail
+      == image_tag 'ishinary_icon.png'
   .span4
     h3 Tarcze Ishihary
     p Przetestuj możliwość rozróżniania kolorów czerwonego i zielonego.
@@ -16,10 +18,12 @@
       ' Tarcze Ishihary
       i.icon-arrow-right
 
+  .span2
+    .thumbnail
+      == image_tag 'amsler_grid_icon.png'
   .span4
     h3 Test Amslera
-    p Test widzenia w obrębie dołka środkowego siatkówki
-    p Test pomaga w wykruciu zwyrodnienia śatkówki lub problemów z nerwem wzrokowym.
+    p Test widzenia w obrębie dołka środkowego siatkówki, pomaga w wykruciu zwyrodnienia śatkówki lub problemów z nerwem wzrokowym.
     a.btn href='test_amslera.html'
       ' Test Amslera
       i.icon-arrow-right
