--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -23,7 +23,7 @@
       == image_tag 'amsler_grid_icon.png'
   .span4
     h3 Test Amslera
-    p Test widzenia w obrębie dołka środkowego siatkówki, pomaga w wykruciu zwyrodnienia śatkówki lub problemów z nerwem wzrokowym.
+    p Test widzenia w obrębie dołka środkowego siatkówki, pomaga w wykryciu zwyrodnienia siatkówki lub problemów z nerwem wzrokowym.
     a.btn href='test_amslera.html'
       ' Test Amslera
       i.icon-arrow-right
