--- a/source/tarcze_ishinary.html.slim
+++ b/source/tarcze_ishinary.html.slim
@@ -30,7 +30,7 @@
                     |  Tarcze 1 - 17 zawierają liczby, tarcze 18 - 24 zawierają jeden lub dwa szlaczki.
                   li 
                     i.icon-ok-circle
-                    |  Prowidłowo widząca osoba powinna być w stanie zidentyfikować liczbę lub prześledzić szlaczki na każdej tarczy.
+                    |  Prawidłowo widząca osoba powinna być w stanie zidentyfikować liczbę lub prześledzić szlaczki na każdej tarczy.
                   li 
                     i.icon-time
                     |  Potrzebujesz 
@@ -74,7 +74,7 @@
                     li 
                       | Aby rozpocząć od nowa przeładuj stronę lub kliknij 
                       strong Jeszcze raz
-                      |  na koncu strony z wynikami.
+                      |  na końcu strony z wynikami.
 
                 p
                   ul.pager
