--- a/source/test_amslera.html.slim
+++ b/source/test_amslera.html.slim
@@ -41,7 +41,7 @@
                   li 
                     | Siądź około 
                     strong 30 centymetrów od monitora
-                    | , tak aby widziana sietka była 
+                    | , tak aby widziana siatka była 
                     strong na wysokości wzroku
                     | .
                   li
@@ -103,14 +103,14 @@
             .row
               .span8
                 h3 Wynik badania
-                p Zniekształcona siatka przedstawiona po prawej ukazuje przykładowy obraz jaki może widzieć osoba z zwyrodnieniem śatkówki lub problemem z nerwem wzrokowym.
+                p Zniekształcona siatka przedstawiona po prawej ukazuje przykładowy obraz jaki może widzieć osoba z zwyrodnieniem siatkówki lub problemem z nerwem wzrokowym.
                 ul.unstyled
                   li
                     i.icon-ok 
-                    |  Jeżeli widziałeś równoległe linie oznaczające kwadraty o takich samych wymiarach to nie masz opisanego probelmu.
+                    |  Jeżeli widziałeś równoległe linie oznaczające kwadraty o takich samych wymiarach to nie masz opisanego problemu.
                   li
                     i.icon-warning-sign 
-                    |  Jeżeli widziałeś siatkę zniekształconą w podobny sposób jak przedstawiono po prawej to prawdopodobnie masz zwyrodnienie satkówki lub problem z nerwem wzrokowym.
+                    |  Jeżeli widziałeś siatkę zniekształconą w podobny sposób jak przedstawiono po prawej to prawdopodobnie masz zwyrodnienie siatkówki lub problem z nerwem wzrokowym.
 
                 hr
                 .well
