--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -4,6 +4,7 @@
 .row
   .span12
     .hero-unit
+      == image_tag 'eye.png', class: 'pull-left', style: 'margin-top: -20px; margin-left: -40px; margin-right: 20px'
       h1 Przetestuj swój wzrok
       p Na tej stronie możesz wykonać kilka prostych badań wzroku.
 
