--- a/source/layout.slim
+++ b/source/layout.slim
@@ -17,7 +17,7 @@ html lang="pl"
       script src="http://html5shim.googlecode.com/svn/trunk/html5.js"
     == javascript_include_tag 'jquery'
 
-    link rel="shortcut icon" href="favicon.ico"
+    link rel="shortcut icon" href="img/favicon.ico"
 
     == yield_content :head
   body
