--- a/source/test_amslera.html.slim
+++ b/source/test_amslera.html.slim
@@ -74,8 +74,9 @@
                 p
                   ul.pager
                     li.next
-                      a.btn-info href='#'
-                        '  Start
+                      a href='#'
+                        strong 
+                          '  Start
                         i.icon-arrow-right
 
         .tab-pane id="pane-grid"
@@ -94,7 +95,8 @@
                         '  Instrukcja
                     li.next
                       a href='#' 
-                        '  Wynik
+                        strong
+                          '  Wynik
                         i.icon-arrow-right
                 .span2 &nbsp;
 
@@ -127,9 +129,10 @@
                         i.icon-arrow-left
                         '  Siatka Amslera
                     li.next
-                      a.btn-info href='test_amslera.html' 
+                      a href='test_amslera.html' 
                         i.icon-refresh
-                        |  Jeszcze raz!
+                        strong
+                          '  Jeszcze raz!
               .span4
                 .thumbnail
                   == image_tag 'amsler_grid_problem.png'
