--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -15,9 +15,8 @@
   .span4
     h3 Tarcze Ishihary
     p Przetestuj możliwość rozróżniania kolorów czerwonego i zielonego.
-    a.btn href='tarcze_ishinary.html'
+    a.btn.btn-primary href='tarcze_ishinary.html'
       ' Tarcze Ishihary
-      i.icon-arrow-right
 
   .span2
     .thumbnail
@@ -25,7 +24,6 @@
   .span4
     h3 Test Amslera
     p Test widzenia w obrębie dołka środkowego siatkówki, pomaga w wykryciu zwyrodnienia siatkówki lub problemów z nerwem wzrokowym.
-    a.btn href='test_amslera.html'
+    a.btn.btn-primary href='test_amslera.html'
       ' Test Amslera
-      i.icon-arrow-right
 
