test zielono czerwony

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -27,3 +27,17 @@
     a.btn.btn-primary href='test_amslera.html'
       ' Test Amslera
 
+.row
+  .span12 &nbsp;
+.row
+  .span2
+    .thumbnail
+      == image_tag 'redgreen_icon.png'
+  .span4
+    h3 Test czerwono - zielony
+    p Przetestuj ostrość widzenia i korekcji okularów.
+    a.btn.btn-primary href='redgreen.html'
+      ' Test czerwono - zielony
+  .span2 &nbsp;
+  .span4 &nbsp;
+
